--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
 	<title>class example</title>
  </head>
  <body>
-  she make javascript more sexy...
+  open console
   <script type="text/javascript" src="../dist/class-debug.js"></script>
   <script type="text/javascript" src="js/example.js"></script>
  </body>
