--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,9 @@
  </head>
  <body>
   open console
-  <script type="text/javascript" src="../dist/class-debug.js"></script>
+  <script type="text/javascript" src="../src/class.js"></script>
+  <script type="text/javascript" src="../src/class.log.js"></script>
+  <script type="text/javascript" src="../src/class.event.js"></script>
   <script type="text/javascript" src="js/example.js"></script>
  </body>
 </html>
